<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/borders">
            <ImageView
                style="@style/ContentTitleBarIcon"
                android:background="@drawable/ic_work_experience"/>
            <TextView 
				style="@style/ContentTitleBarText"
				android:gravity="center"
				android:textSize="25dp"
                android:text="@string/content_title_work_experience"/>
   </RelativeLayout>
   <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
            <LinearLayout 
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical" 
                >
                <TextView
                   style="@style/EmployerSubHead"
                   android:text="@string/content_Work_experience_sub_brava"/>
                <LinearLayout
                    style="@style/WorkExperienceContentItemRow">
                    <TextView
                        style="@style/WorkItemBullet"/>
                    <TextView 
                        style="@style/WorkItemText"
                        android:text="@string/content_Work_experience_content_brava1"/>  
                </LinearLayout>
                <LinearLayout
                    style="@style/WorkExperienceContentItemRow">
                    <TextView
                        style="@style/WorkItemBullet"/>
                    <TextView 
                        style="@style/WorkItemText"
                        android:text="@string/content_Work_experience_content_brava2"/>  
                </LinearLayout>
                <LinearLayout
                    style="@style/WorkExperienceContentItemRow">
                    <TextView
                        style="@style/WorkItemBullet"/>
                    <TextView 
                        style="@style/WorkItemText"
                        android:text="@string/content_Work_experience_content_brava3"/>  
                </LinearLayout>
                
                <TextView
                   style="@style/EmployerSubHead"
                   android:text="@string/content_Work_experience_sub_usertesting"/>
                <LinearLayout
                    style="@style/WorkExperienceContentItemRow">
                    <TextView
                        style="@style/WorkItemBullet"/>
                    <TextView 
                        style="@style/WorkItemText"
                        android:text="@string/content_Work_experience_content_usertesting"/>  
                </LinearLayout>
                
                <TextView
                   style="@style/EmployerSubHead"
                   android:text="@string/content_Work_experience_sub_mv_analyst"/>
                <LinearLayout
                    style="@style/WorkExperienceContentItemRow">
                    <TextView
                        style="@style/WorkItemBullet"/>
                    <TextView 
                        style="@style/WorkItemText"
                        android:text="@string/content_Work_experience_content_mv_analyst1"/>  
                </LinearLayout>
                <LinearLayout
                    style="@style/WorkExperienceContentItemRow">
                    <TextView
                        style="@style/WorkItemBullet"/>
                    <TextView 
                        style="@style/WorkItemText"
                        android:text="@string/content_Work_experience_content_mv_analyst2"/>  
                </LinearLayout>
                <LinearLayout
                    style="@style/WorkExperienceContentItemRow">
                    <TextView
                        style="@style/WorkItemBullet"/>
                    <TextView 
                        style="@style/WorkItemText"
                        android:text="@string/content_Work_experience_content_mv_analyst3"/>  
                </LinearLayout>
                
                <TextView
                   style="@style/EmployerSubHead"
                   android:text="@string/content_Work_experience_sub_mv_assistant"/>
                <LinearLayout
                    style="@style/WorkExperienceContentItemRow">
                    <TextView
                        style="@style/WorkItemBullet"/>
                    <TextView 
                        style="@style/WorkItemText"
                        android:text="@string/content_Work_experience_content_mv_assistant1"/>  
                </LinearLayout>
                <LinearLayout
                    style="@style/WorkExperienceContentItemRow">
                    <TextView
                        style="@style/WorkItemBullet"/>
                    <TextView 
                        style="@style/WorkItemText"
                        android:text="@string/content_Work_experience_content_mv_assistant2"/>  
                </LinearLayout>
                <LinearLayout
                    style="@style/WorkExperienceContentItemRow">
                    <TextView
                        style="@style/WorkItemBullet"/>
                    <TextView 
                        style="@style/WorkItemText"
                        android:text="@string/content_Work_experience_content_mv_assistant3"/>  
                </LinearLayout>
   </LinearLayout>
</ScrollView>
</LinearLayout>
