<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="match_parent" 
    android:orientation="vertical"
    >
    <RelativeLayout
        android:id="@+id/home_fragment_header"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_margin="1dp"
        android:layout_weight="1"
        android:background="@drawable/borders"
         >
         <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true">
            <TextView 
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingRight="4dp"
                android:textSize="30dp"
                android:textColor="#44444444"
                android:text="@string/header_row_firstName"
                android:layout_weight="1"
                />
                <TextView 
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="4dp"
                android:textSize="30dp"
                android:textColor="#3D85C6"
                android:text="@string/header_row_lastName"
                android:layout_weight="1"
                />
            </LinearLayout>
    </RelativeLayout>
    <RelativeLayout 
        android:id="@+id/home_fragment_skillsRow"
        style="@style/HomeScreenRow"
        android:background="@drawable/borders"
        >
        <ImageView
            style="@style/RowIcon"
            />
        <TextView 
            style="@style/RowText"
            android:text="@string/skills"
            />
        <ImageView
            style="@style/RowArrow"
            android:src="@drawable/ic_go_search_api_holo_light"
            />
    </RelativeLayout>
    <RelativeLayout 
        android:id="@+id/home_fragment_workExperienceRow"
        style="@style/HomeScreenRow"
        android:background="@drawable/borders"
        >
        <ImageView
            style="@style/RowIcon"
            />
        <TextView 
            android:text="@string/work_experience"
            style="@style/RowText"
            />
        <ImageView
            style="@style/RowArrow"
            android:src="@drawable/ic_go_search_api_holo_light"
            />
    </RelativeLayout>
        <RelativeLayout 
        android:id="@+id/home_fragment_educationRow"
        style="@style/HomeScreenRow"
        android:background="@drawable/borders"
        >
        <ImageView
            style="@style/RowIcon"
            />
        <TextView 
            style="@style/RowText"
            android:text="@string/education"
            />
        <ImageView
            style="@style/RowArrow"
            android:src="@drawable/ic_go_search_api_holo_light"
            />
    </RelativeLayout>
    <RelativeLayout 
        android:id="@+id/home_fragment_awardsRow"
        style="@style/HomeScreenRow"
        android:background="@drawable/borders"
        >
        <ImageView
            style="@style/RowIcon"
            />
        <TextView 
            style="@style/RowText"
            android:text="@string/awards"
            />
        <ImageView
            style="@style/RowArrow"
            android:src="@drawable/ic_go_search_api_holo_light"
            />
    </RelativeLayout>        
    <RelativeLayout 
        android:id="@+id/home_fragment_contactRow"
        style="@style/HomeScreenRow"
        android:background="@drawable/last_row_no_borders"
        >
        <ImageView
            style="@style/RowIcon"
            />
        <TextView 
            style="@style/RowText"
            android:text="@string/contact"
            />
        <ImageView
            style="@style/RowArrow"
            android:src="@drawable/ic_go_search_api_holo_light"
            />
    </RelativeLayout>
    

</LinearLayout>
